--- a/templates/partials/_user-nav.html.twig
+++ b/templates/partials/_user-nav.html.twig
@@ -23,12 +23,12 @@
 				</li>
 				<li class="nav-item">
 					<a href="{{ path('user_documents_favorites') }}" class="nav-link">
-						<i class="fa-duotone fa-bookmark me-2"></i>Mes documents favoris</a>
+						<i class="fa-duotone fa-bookmark me-2"></i>Mes favoris</a>
 
 				</li>
 				<li class="nav-item">
 					<a href="{{ path('user_documents_uploads') }}" class="nav-link">
-						<i class="fa-duotone fa-share-from-square me-2"></i>Mes documents partagés</a>
+						<i class="fa-duotone fa-share-from-square me-2"></i>Mes partages</a>
 
 				</li>
 				<li class="nav-item">
