--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -42,8 +42,9 @@
 }
 
 .hero h1 {
-    font-size: 8rem;
+    font-size: 6rem;
     text-transform: uppercase;
+    text-align: center;
     letter-spacing: -1.2rem;
 }
 
@@ -56,58 +57,32 @@
 }
 
 .devise {
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+.slogan {
+    font-size: 0.8rem;
+}
+
+@media screen and (min-width: 860px) {
+    .hero-right {
+        clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+    }
+
+    .hero h1 {
+        font-size: 8rem;
+    }
+
+    .devise {
+        font-size: 2rem;
+    }
+
+    .slogan {
+        font-size: 1rem;
+    }
 }
 
 /***** FEATURE *****/
-
-.feature {
-    width: 100%;
-    height: 400px;
-    position: relative;
-    background-color: var(--neutral-500-color);
-    overflow: hidden;
-}
-
-.feature-text {
-    width: 60%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    background-color: var(--base-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.feature-odd {
-    left: 40%;
-    clip-path: polygon(12% 0%, 100% 0%, 100% 100%, 0% 100%);
-    padding-left: 10%;
-    padding-right: 2rem;
-}
-
-.feature-even {
-    left: 0%;
-    clip-path: polygon(0% 0%, 100% 0%, 88% 100%, 0% 100%);
-    padding-left: 2rem;
-    padding-right: 10%;
-    z-index: 1;
-}
-
-.feature-video {
-    width: 50%;
-    height: 100%;
-}
-
-.feature-video-even {
-    transform: translateX(100%);
-}
-
-.feature-img {
-    display: block;
-    transform: translateX(25%);
-}
 
 #background-video {
     height: 100%;
@@ -115,4 +90,62 @@
     right: 0;
     object-fit: cover;
     z-index: -1;
+}
+
+.feature {
+    background-color: var(--neutral-500-color);
+    overflow: hidden;
+}
+
+.feature-text {
+    background-color: var(--base-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 860px) {
+    .feature {
+        width: 100%;
+        height: 400px;
+        position: relative;
+    }
+
+    .feature-text {
+        width: 60%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        margin: 0;
+    }
+
+    .feature-odd {
+        left: 40%;
+        clip-path: polygon(12% 0%, 100% 0%, 100% 100%, 0% 100%);
+        padding-left: 10%;
+        padding-right: 2rem;
+    }
+
+    .feature-even {
+        left: 0%;
+        clip-path: polygon(0% 0%, 100% 0%, 88% 100%, 0% 100%);
+        padding-left: 2rem;
+        padding-right: 10%;
+        z-index: 1;
+    }
+
+    .feature-video {
+        width: 50%;
+        height: 100%;
+    }
+
+    .feature-video-even {
+        transform: translateX(100%);
+    }
+
+    .feature-img {
+        display: block;
+        transform: translateX(25%);
+    }
 }
