--- a/templates/document/search.html.twig
+++ b/templates/document/search.html.twig
@@ -8,10 +8,10 @@
 {% endblock %}
 {% block body %}
 	<div class="container my-5">
-		<h1 class="page-title">Rechercher un document</h1>
+		<h1 class="page-title my-5">Rechercher un document</h1>
 
 		{{ form_start(form, {'attr': {'id': 'form_filter_documents'}}) }}
-		<div class="row">
+		<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 my-3">
 			<div class="col">
 				{{ form_row(form.type) }}
 			</div>
@@ -25,15 +25,14 @@
 				{{ form_row(form.theme)}}
 			</div>
 		</div>
-		<div class="mb-3">
+		<div class="my-3">
 			{{ form_widget(form.title)}}
 		</div>
 
+		<div class="bar w-75 mx-auto my-5"></div>
 
-		<div class="bar w-75 mx-auto my-3"></div>
-
-		<div id="filters" class="row gap-3">
-			<div class="col d-flex flex-column align-items-center">
+		<div id="filters" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+			<div class="col d-flex flex-column align-items-start">
 				{{ form_label(form.ratingAverage)}}
 				<div id="{{ field_name(form.ratingAverage) }}" class="d-flex justify-content-center" onchange="this.closest('form').submit()">
 					{% for value in field_choices(form.ratingAverage) %}
@@ -50,7 +49,7 @@
 				{{ form_row(form.orderBy)}}
 			</div>
 			{% if app.request.query is not empty and app.request.query | length > 1 %}
-				<div class="col d-flex align-items-center justify-content-end">
+				<div class="col col-md-12 col-lg-4 d-flex align-items-center justify-content-center">
 					<a href="{{ path('document_search') }}" class="btn btn-warning">
 						<i class="fa-duotone fa-eraser me-2"></i>
 						Effacer tous les filtres
@@ -60,9 +59,9 @@
 		</div>
 		{{ form_end(form) }}
 
-		<div id="results" class="container overflow-hidden my-3">
+		<div id="results" class="container overflow-hidden my-5">
 
-			<div class="row row-cols-3 g-3" id="document_results">
+			<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3" id="document_results">
 
 				{% for document in documents %}
 					<div class="col document" data-rating="{{document.ratingAverage}}">
