--- a/templates/document/show.html.twig
+++ b/templates/document/show.html.twig
@@ -12,18 +12,9 @@
 
 {% block body %}
 	<div class="m-5">
-		<div class="row gap-3">
-			<div class="col">
-				{# <object data="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" type="application/pdf" width="100%" height="700px">
-																	<iframe src="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" width="100%" height="700px">
-																		<p>Insert your error message here, if the PDF cannot be displayed.</p>
-																	</iframe>
-																	// passer par une route qui renvoie le fichier avec entête particulière pour dire de ne pas télécharger le document
-																</object> #}
-				{# <iframe src="http://docs.google.com/gview?url={{ path('document_show_pdf', {slug: document.slug}) }}&embedded=true" frameborder="0"></iframe> #}
-
-			<embed
-				src="{{ path('document_show_pdf', {slug: document.slug}) }}" type="application/pdf" width="100%" height="700px"> {# <canvas id="the-canvas"></canvas> #}
+		<div class="row row-cols-1 row-cols-lg-2 g-3">
+			<div class="col hidden-mobile">
+				<embed src="{{ path('document_show_pdf', {slug: document.slug}) }}#toolbar=0" type="application/pdf" width="100%" height="700px">
 			</div>
 
 			<div class="col">
@@ -90,7 +81,7 @@
 					<div class="my-3">
 						<h2>Ces documents pourraient vous intéresser :
 						</h2>
-						<div class="row row-cols-2 g-3">
+						<div class="row row-cols-1 row-cols-md-2 g-3">
 							{% for suggestion in suggestions %}
 								<div class="col document" data-rating="{{suggestion.ratingAverage}}">
 									{% include 'partials/_document.html.twig' with {'document': suggestion} %}
@@ -102,7 +93,7 @@
 				<div class="my-3">
 					<h2>Du même auteur :
 					</h2>
-					<div class="row row-cols-2 g-3">
+					<div class="row row-cols-1 row-cols-md-2 g-3">
 						{% for document in sameAuthorDocuments %}
 							<div class="col document" data-rating="{{document.ratingAverage}}">
 								{% include 'partials/_document.html.twig' %}
