--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,10 +1,10 @@
 <footer class="bg-light py-3 mt-auto">
-	<section class="d-flex justify-content-between align-items-center">
-		<div class="w-100 text-center">
+	<section class="row row-cols-1 row-cols-md-3 mx-3">
+		<div class="col text-center">
 			<img src="" alt="" class="logo">
 			<h2>TeachingHub</h2>
 		</div>
-		<div class="w-100">
+		<div class="col">
 			<h3>Chercher un document</h3>
 			<nav class="mb-3">
 				<ul class="navbar-nav ms-3">
@@ -17,7 +17,7 @@
 			</nav>
 			<h3>Déposer un document</h3>
 		</div>
-		<div class="w-100">
+		<div class="col">
 			<h3>À propos de nous</h3>
 			<nav>
 				<ul class="navbar-nav ms-3">
@@ -43,7 +43,7 @@
 		</div>
 	</section>
 	<section class="d-flex justify-content-between align-items-center my-3">
-		<div class="d-flex align-items-center w-100">
+		<div class="d-flex align-items-center w-50 w-md-100">
 			<div class="bar"></div>
 		</div>
 		<div class="d-flex justify-content-around align-items-center w-100 fs-1">
@@ -53,7 +53,7 @@
 			<i class="fa-brands fa-tiktok"></i>
 			<i class="fa-brands fa-instagram"></i>
 		</div>
-		<div class="d-flex align-items-center w-100">
+		<div class="d-flex align-items-center w-50 w-md-100">
 			<div class="bar"></div>
 		</div>
 	</section>
