--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -36,8 +36,9 @@
 					<li>
 						<a href="{{ path('app_privacy') }}">Politique de confidentialité</a>
 					</li>
-					<li>Nos partenaires</li>
-					<li>Plan du site</li>
+					<li>
+						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Nos partenaires</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
