--- a/templates/app/accessibility.html.twig
+++ b/templates/app/accessibility.html.twig
@@ -6,14 +6,12 @@
 
 {% block body %}
 
-	{% include('/partials/_marquee-text.html.twig') %}
+	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 
 	<div class="hero static-page-hero d-flex justify-content-center align-items-center">
 
 		<h1 class="text-center static-page-title">Politique d'accessibilité</h1>
 	</div>
-
-	{% include('/partials/_marquee-icons.html.twig') %}
 
 	<div class="container">
 		<p>
@@ -28,7 +26,7 @@
 	</div>
 
 	<div class="spacer"></div>
-	{% include('/partials/_marquee-text.html.twig') %}
+	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 	<div class="spacer"></div>
 
 {% endblock %}
