--- a/templates/app/legal_mentions.html.twig
+++ b/templates/app/legal_mentions.html.twig
@@ -6,14 +6,12 @@
 
 {% block body %}
 
-	{% include('/partials/_marquee-text.html.twig') %}
+	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 
 	<div class="hero static-page-hero d-flex justify-content-center align-items-center">
 
 		<h1 class="text-center static-page-title">Mentions légales</h1>
 	</div>
-
-	{% include('/partials/_marquee-icons.html.twig') %}
 
 	<div class="container">
 		<h2>Éditeur du site</h2>
@@ -40,8 +38,8 @@
 
 
 		Tous les contenus présents sur le site sont couverts par le droit d'auteur. Toute reprise est dès lors conditionnée à l'accord de l'auteur en vertu de l'article L.122-4 du Code de la Propriété Intellectuelle.
-						
-						Les utilisateurs sont responsables du contenu qu'ils partagent sur la plateforme. Ils doivent s'assurer qu'ils ont tous les droits et autorisations nécessaires pour partager ces documents.
+								
+								Les utilisateurs sont responsables du contenu qu'ils partagent sur la plateforme. Ils doivent s'assurer qu'ils ont tous les droits et autorisations nécessaires pour partager ces documents.
 
 		<h2>Utilisation des cookies</h2>
 
